#0020 Fixed flickering of screen. Also moved error message to side of screen.

--- a/game.css
+++ b/game.css
@@ -1,4 +1,7 @@
-
+div,h2{
+	font-family: verdana, helvetica, arial, sans-serif;
+	font-size: 19px;
+}
 .notify{
 	text-align: center;
 	display: none;
@@ -16,8 +19,9 @@ line{
 	stroke: rgb(0,200,0);
 }
 #error{
+	position: relative;
 	display: none;
-	margin-left: 36%;
+	margin-left: 65%;
 	color: red;
 	height: 380px;
 	width: 300px;
@@ -27,7 +31,7 @@ line{
 
 #errorMsg {
 	position: relative;
-	top: 75%;
+	top: 70%;
 	max-width: 70%;
 	margin: 0 auto;
 }
@@ -74,7 +78,7 @@ line{
 		margin-left: 24%;
 	}		
 	#error {
-		margin-left: 32%;
+		margin-left: 65%;
 	}
 }
 
@@ -83,6 +87,6 @@ line{
 		margin-left: 28%;
 	}
 	#error {
-		margin-left: 33%;
+		margin-left: 65%;
 	}		
 }
